More on boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -603,9 +603,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{5: 4}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "size = 5\n",
     "\n",
@@ -625,7 +636,19 @@
     "                        for l in range(size-1, -1, -1):\n",
     "                            if not(k==0 and l==0):\n",
     "                                dp_new[i-k][j-l][0] = 0\n",
-    "    size -= 1    "
+    "    size -= 1 \n",
+    "\n",
+    "box_dict = {}\n",
+    "for i in range(10):\n",
+    "    for j in range(len(dp_new[0])):\n",
+    "        if dp_new[i][j][0] > 0:\n",
+    "            if dp_new[i][j][0] not in box_dict:\n",
+    "                box_dict[dp_new[i][j][0]] = 1\n",
+    "            else:\n",
+    "                box_dict[dp_new[i][j][0]] += 1\n",
+    "                \n",
+    "box_dict\n",
+    "   "
    ]
   },
   {
@@ -659,17 +682,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False True False False False False True \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False True False False False False True \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(len(dp_new[0])):\n",
+    "        print(dp_new[i][j][3], end=\" \")\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{5: 4}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box_dict = {}\n",
+    "for i in range(10):\n",
+    "    for j in range(len(dp_new[0])):\n",
+    "        if dp_new[i][j][0] > 0:\n",
+    "            if dp_new[i][j][0] not in box_dict:\n",
+    "                box_dict[dp_new[i][j][0]] = 1\n",
+    "            else:\n",
+    "                box_dict[dp_new[i][j][0]] += 1\n",
+    "                \n",
+    "box_dict"
+   ]
   },
   {
    "cell_type": "code",
