--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -603,21 +603,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "\n",
+      "[[0, 0, 0, False], [0, 0, 1, False], [0, 0, 2, False], [0, 0, 3, False], [0, 0, 4, False], [0, 0, 5, False], [0, 0, 6, False], [0, 0, 7, False], [0, 0, 8, False], [0, 0, 9, False]]\n",
+      "[[0, 1, 0, False], [0, 1, 1, False], [0, 1, 2, False], [0, 1, 3, False], [0, 1, 4, False], [0, 1, 5, False], [0, 1, 6, False], [0, 1, 7, False], [0, 1, 8, False], [0, 1, 9, False]]\n",
+      "[[0, 2, 0, False], [0, 2, 1, False], [0, 2, 2, False], [0, 2, 3, False], [0, 2, 4, False], [0, 2, 5, False], [0, 2, 6, False], [0, 2, 7, False], [0, 2, 8, False], [0, 2, 9, False]]\n",
+      "[[0, 3, 0, False], [0, 3, 1, False], [0, 3, 2, False], [0, 3, 3, False], [0, 3, 4, False], [0, 3, 5, False], [0, 3, 6, False], [0, 3, 7, False], [0, 3, 8, False], [0, 3, 9, False]]\n",
+      "[[0, 4, 0, False], [0, 4, 1, False], [0, 4, 2, False], [0, 4, 3, False], [0, 4, 4, False], [0, 4, 5, False], [0, 4, 6, False], [0, 4, 7, False], [0, 4, 8, False], [0, 4, 9, False]]\n",
+      "[[0, 5, 0, False], [0, 5, 1, False], [0, 5, 2, False], [0, 5, 3, False], [0, 5, 4, False], [0, 5, 5, False], [0, 5, 6, False], [0, 5, 7, False], [0, 5, 8, False], [0, 5, 9, False]]\n",
+      "[[0, 6, 0, False], [0, 6, 1, False], [0, 6, 2, False], [0, 6, 3, False], [0, 6, 4, False], [0, 6, 5, False], [0, 6, 6, False], [0, 6, 7, False], [0, 6, 8, False], [0, 6, 9, False]]\n",
+      "[[0, 7, 0, False], [0, 7, 1, False], [0, 7, 2, False], [0, 7, 3, False], [0, 7, 4, False], [0, 7, 5, False], [0, 7, 6, False], [0, 7, 7, False], [0, 7, 8, False], [0, 7, 9, False]]\n",
+      "[[0, 8, 0, False], [0, 8, 1, False], [0, 8, 2, False], [0, 8, 3, False], [0, 8, 4, False], [0, 8, 5, False], [0, 8, 6, False], [0, 8, 7, False], [0, 8, 8, False], [0, 8, 9, False]]\n",
+      "[[0, 9, 0, False], [0, 9, 1, False], [0, 9, 2, False], [0, 9, 3, False], [0, 9, 4, False], [0, 9, 5, False], [0, 9, 6, False], [0, 9, 7, False], [0, 9, 8, False], [0, 9, 9, False]]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{5: 4}"
+       "{}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "input = open(\"data/boj_17136.txt\", \"r\").readline\n",
+    "\n",
+    "\n",
+    "arr = [input().split() for _ in range(10)]\n",
+    "dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
+    "dp_new = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
+    "\n",
+    "for row in arr:\n",
+    "    print(row)\n",
+    "print()\n",
+    "\n",
+    "for row in dp:\n",
+    "    print(row)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "size = 5\n",
     "\n",
     "while size >= 1:\n",
@@ -653,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -664,12 +708,12 @@
       "0 0 0 0 0 0 0 0 0 0 \n",
       "0 0 0 0 0 0 0 0 0 0 \n",
       "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 5 0 0 0 0 5 \n",
       "0 0 0 0 0 0 0 0 0 0 \n",
       "0 0 0 0 0 0 0 0 0 0 \n",
       "0 0 0 0 0 0 0 0 0 0 \n",
       "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 5 0 0 0 0 5 \n"
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n"
      ]
     }
    ],
@@ -682,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -693,12 +737,12 @@
       "False False False False False False False False False False \n",
       "False False False False False False False False False False \n",
       "False False False False False False False False False False \n",
-      "False False False False True False False False False True \n",
       "False False False False False False False False False False \n",
       "False False False False False False False False False False \n",
       "False False False False False False False False False False \n",
       "False False False False False False False False False False \n",
-      "False False False False True False False False False True \n"
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n"
      ]
     }
    ],
@@ -711,16 +755,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{5: 4}"
+       "{}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
