--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -611,12 +611,12 @@
      "output_type": "stream",
      "text": [
       "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '1', '0', '0', '0', '0', '0', '0', '0', '0']\n",
       "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '1', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '1', '0', '0', '0', '0']\n",
       "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '1', '0', '0', '0', '0', '0', '0', '0']\n",
       "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
       "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
       "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
@@ -639,7 +639,7 @@
        "{}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
     "                sum = 0\n",
     "                for k in range(size-1, -1, -1):\n",
     "                    for l in range(size-1, -1, -1):\n",
-    "                        if not dp_new[i-k][j-l][3] and dp_new[i-k][j-l][0] != 0:\n",
+    "                        if not dp_new[i-k][j-l][3]:\n",
     "                            sum += 1\n",
     "                print(f\"(i, j) : ({i}, {j}),  sum : {sum}\")\n",
     "                if sum == size ** 2:\n",
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
