More on boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -603,23 +603,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '1', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '1', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '1', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '1', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
       "\n",
       "[[0, 0, 0, False], [0, 0, 1, False], [0, 0, 2, False], [0, 0, 3, False], [0, 0, 4, False], [0, 0, 5, False], [0, 0, 6, False], [0, 0, 7, False], [0, 0, 8, False], [0, 0, 9, False]]\n",
       "[[0, 1, 0, False], [0, 1, 1, False], [0, 1, 2, False], [0, 1, 3, False], [0, 1, 4, False], [0, 1, 5, False], [0, 1, 6, False], [0, 1, 7, False], [0, 1, 8, False], [0, 1, 9, False]]\n",
@@ -639,7 +639,7 @@
        "{}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
        "{}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "input = open(\"data/boj_17136.txt\", \"r\").readline\n",
+    "\n",
+    "\n",
+    "arr = [input().split() for _ in range(10)]\n",
+    "dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
+    "dp_new = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
+    "\n",
+    "for row in arr:\n",
+    "    print(row)\n",
+    "print()\n",
+    "\n",
+    "for row in dp:\n",
+    "    print(row)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "size = 5\n",
+    "\n",
+    "while size >= 1:\n",
+    "    for i in range(10):\n",
+    "        for j in range(len(dp_new[0])):\n",
+    "            if dp_new[i][j][0] == size and not dp_new[i][j][3]:\n",
+    "                sum = 0\n",
+    "                for k in range(size-1, -1, -1):\n",
+    "                    for l in range(size-1, -1, -1):\n",
+    "                        if not dp_new[i-k][j-l][3]:\n",
+    "                            sum += 1\n",
+    "                print(f\"(i, j) : ({i}, {j}),  sum : {sum}\")\n",
+    "                if sum == size ** 2:\n",
+    "                    dp_new[i][j][3] = True\n",
+    "                    for k in range(size-1, -1, -1):\n",
+    "                        for l in range(size-1, -1, -1):\n",
+    "                            if not(k==0 and l==0):\n",
+    "                                dp_new[i-k][j-l][0] = 0\n",
+    "    size -= 1 \n",
+    "\n",
+    "box_dict = {}\n",
+    "for i in range(10):\n",
+    "    for j in range(len(dp_new[0])):\n",
+    "        if dp_new[i][j][0] > 0:\n",
+    "            if dp_new[i][j][0] not in box_dict:\n",
+    "                box_dict[dp_new[i][j][0]] = 1\n",
+    "            else:\n",
+    "                box_dict[dp_new[i][j][0]] += 1\n",
+    "                \n",
+    "box_dict\n",
+    "   "
+   ]
   },
   {
    "cell_type": "code",
