More on boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -795,51 +795,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input = open(\"data/boj_17136.txt\", \"r\").readline\n",
-    "\n",
-    "\n",
     "arr = [input().split() for _ in range(10)]\n",
     "dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
-    "dp_new = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
-    "\n",
-    "for row in arr:\n",
-    "    print(row)\n",
-    "print()\n",
-    "\n",
-    "for row in dp:\n",
-    "    print(row)\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "size = 5\n",
     "\n",
     "while size >= 1:\n",
     "    for i in range(10):\n",
-    "        for j in range(len(dp_new[0])):\n",
-    "            if dp_new[i][j][0] == size and not dp_new[i][j][3]:\n",
+    "        for j in range(len(dp[0])):\n",
+    "            if dp[i][j][0] == size and not dp[i][j][3]:\n",
     "                sum = 0\n",
     "                for k in range(size-1, -1, -1):\n",
     "                    for l in range(size-1, -1, -1):\n",
-    "                        if not dp_new[i-k][j-l][3]:\n",
+    "                        if not dp[i-k][j-l][3]:\n",
     "                            sum += 1\n",
-    "                print(f\"(i, j) : ({i}, {j}),  sum : {sum}\")\n",
+    "                #print(f\"(i, j) : ({i}, {j}),  sum : {sum}\")\n",
     "                if sum == size ** 2:\n",
-    "                    dp_new[i][j][3] = True\n",
+    "                    dp[i][j][3] = True\n",
     "                    for k in range(size-1, -1, -1):\n",
     "                        for l in range(size-1, -1, -1):\n",
     "                            if not(k==0 and l==0):\n",
-    "                                dp_new[i-k][j-l][0] = 0\n",
+    "                                dp[i-k][j-l][0] = 0\n",
     "    size -= 1 \n",
     "\n",
     "box_dict = {}\n",
     "for i in range(10):\n",
-    "    for j in range(len(dp_new[0])):\n",
-    "        if dp_new[i][j][0] > 0:\n",
-    "            if dp_new[i][j][0] not in box_dict:\n",
-    "                box_dict[dp_new[i][j][0]] = 1\n",
+    "    for j in range(len(dp[0])):\n",
+    "        if dp[i][j][0] > 0:\n",
+    "            if dp[i][j][0] not in box_dict:\n",
+    "                box_dict[dp[i][j][0]] = 1\n",
     "            else:\n",
-    "                box_dict[dp_new[i][j][0]] += 1\n",
+    "                box_dict[dp[i][j][0]] += 1\n",
     "                \n",
     "box_dict\n",
     "   "
