--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2818,34 +2818,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "\n",
-      "[[0, 0, 0, False], [0, 0, 1, False], [0, 0, 2, False], [0, 0, 3, False], [0, 0, 4, False], [0, 0, 5, False], [0, 0, 6, False], [0, 0, 7, False], [0, 0, 8, False], [0, 0, 9, False]]\n",
-      "[[0, 1, 0, False], [0, 1, 1, False], [0, 1, 2, False], [0, 1, 3, False], [0, 1, 4, False], [0, 1, 5, False], [0, 1, 6, False], [0, 1, 7, False], [0, 1, 8, False], [0, 1, 9, False]]\n",
-      "[[0, 2, 0, False], [0, 2, 1, False], [0, 2, 2, False], [0, 2, 3, False], [0, 2, 4, False], [0, 2, 5, False], [0, 2, 6, False], [0, 2, 7, False], [0, 2, 8, False], [0, 2, 9, False]]\n",
-      "[[0, 3, 0, False], [0, 3, 1, False], [0, 3, 2, False], [0, 3, 3, False], [0, 3, 4, False], [0, 3, 5, False], [0, 3, 6, False], [0, 3, 7, False], [0, 3, 8, False], [0, 3, 9, False]]\n",
-      "[[0, 4, 0, False], [0, 4, 1, False], [0, 4, 2, False], [0, 4, 3, False], [0, 4, 4, False], [0, 4, 5, False], [0, 4, 6, False], [0, 4, 7, False], [0, 4, 8, False], [0, 4, 9, False]]\n",
-      "[[0, 5, 0, False], [0, 5, 1, False], [0, 5, 2, False], [0, 5, 3, False], [0, 5, 4, False], [0, 5, 5, False], [0, 5, 6, False], [0, 5, 7, False], [0, 5, 8, False], [0, 5, 9, False]]\n",
-      "[[0, 6, 0, False], [0, 6, 1, False], [0, 6, 2, False], [0, 6, 3, False], [0, 6, 4, False], [0, 6, 5, False], [0, 6, 6, False], [0, 6, 7, False], [0, 6, 8, False], [0, 6, 9, False]]\n",
-      "[[0, 7, 0, False], [0, 7, 1, False], [0, 7, 2, False], [0, 7, 3, False], [0, 7, 4, False], [0, 7, 5, False], [0, 7, 6, False], [0, 7, 7, False], [0, 7, 8, False], [0, 7, 9, False]]\n",
-      "[[0, 8, 0, False], [0, 8, 1, False], [0, 8, 2, False], [0, 8, 3, False], [0, 8, 4, False], [0, 8, 5, False], [0, 8, 6, False], [0, 8, 7, False], [0, 8, 8, False], [0, 8, 9, False]]\n",
-      "[[0, 9, 0, False], [0, 9, 1, False], [0, 9, 2, False], [0, 9, 3, False], [0, 9, 4, False], [0, 9, 5, False], [0, 9, 6, False], [0, 9, 7, False], [0, 9, 8, False], [0, 9, 9, False]]\n",
       "1 1 1 1 1 1 1 1 1 1 \n",
       "1 2 2 2 2 2 2 2 2 2 \n",
       "1 2 3 3 3 3 3 3 3 3 \n",
@@ -2867,16 +2846,52 @@
       "False False False False False False False False False False \n",
       "False False False False False False False False False False \n",
       "False False False False False False False False False False \n",
-      "\n"
+      "\n",
+      "(i, j) : (4, 4),  sum : 25\n",
+      "(i, j) : (4, 5),  sum : 24\n",
+      "(i, j) : (4, 6),  sum : 24\n",
+      "(i, j) : (4, 7),  sum : 24\n",
+      "(i, j) : (4, 8),  sum : 24\n",
+      "(i, j) : (4, 9),  sum : 25\n",
+      "(i, j) : (5, 4),  sum : 24\n",
+      "(i, j) : (5, 5),  sum : 24\n",
+      "(i, j) : (5, 6),  sum : 24\n",
+      "(i, j) : (5, 7),  sum : 24\n",
+      "(i, j) : (5, 8),  sum : 24\n",
+      "(i, j) : (5, 9),  sum : 24\n",
+      "(i, j) : (6, 4),  sum : 24\n",
+      "(i, j) : (6, 5),  sum : 24\n",
+      "(i, j) : (6, 6),  sum : 24\n",
+      "(i, j) : (6, 7),  sum : 24\n",
+      "(i, j) : (6, 8),  sum : 24\n",
+      "(i, j) : (6, 9),  sum : 24\n",
+      "(i, j) : (7, 4),  sum : 24\n",
+      "(i, j) : (7, 5),  sum : 24\n",
+      "(i, j) : (7, 6),  sum : 24\n",
+      "(i, j) : (7, 7),  sum : 24\n",
+      "(i, j) : (7, 8),  sum : 24\n",
+      "(i, j) : (7, 9),  sum : 24\n",
+      "(i, j) : (8, 4),  sum : 24\n",
+      "(i, j) : (8, 5),  sum : 24\n",
+      "(i, j) : (8, 6),  sum : 24\n",
+      "(i, j) : (8, 7),  sum : 24\n",
+      "(i, j) : (8, 8),  sum : 24\n",
+      "(i, j) : (8, 9),  sum : 24\n",
+      "(i, j) : (9, 4),  sum : 25\n",
+      "(i, j) : (9, 5),  sum : 24\n",
+      "(i, j) : (9, 6),  sum : 24\n",
+      "(i, j) : (9, 7),  sum : 24\n",
+      "(i, j) : (9, 8),  sum : 24\n",
+      "(i, j) : (9, 9),  sum : 25\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{}"
+       "{5: 4}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2885,13 +2900,6 @@
     "input = open(\"data/boj_17136.txt\", \"r\").readline\n",
     "arr = [input().split() for _ in range(10)]\n",
     "dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
-    "\n",
-    "for row in arr:\n",
-    "    print(row)\n",
-    "print()\n",
-    "\n",
-    "for row in dp:\n",
-    "    print(row)\n",
     "\n",
     "for i in range(len(arr[0])):\n",
     "    if arr[0][i] == \"1\":\n",
@@ -2921,7 +2929,7 @@
     "size = 5\n",
     "for i in range(10):\n",
     "    for j in range(len(dp[0])):\n",
-    "        if dp_new[i][j][0] == size and not dp[i][j][3]:\n",
+    "        if dp[i][j][0] == size and not dp[i][j][3]:\n",
     "            sum = 0\n",
     "            for k in range(size-1, -1, -1):\n",
     "                for l in range(size-1, -1, -1):\n",
@@ -2940,12 +2948,41 @@
     "for i in range(10):\n",
     "    for j in range(len(dp[0])):\n",
     "        if dp[i][j][0] > 0:\n",
-    "            if dp_new[i][j][0] not in box_dict:\n",
+    "            if dp[i][j][0] not in box_dict:\n",
     "                box_dict[dp[i][j][0]] = 1\n",
     "            else:\n",
     "                box_dict[dp[i][j][0]] += 1\n",
     "                \n",
     "box_dict         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 5 0 0 0 0 5 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 5 0 0 0 0 5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(len(dp[0])):\n",
+    "        print(dp[i][j][0], end=\" \")\n",
+    "    print()"
    ]
   }
  ],
