--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2994,9 +2994,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(i, j) : (5, 6),  sum : 9\n",
+      "(i, j) : (2, 2),  sum : 4\n",
+      "(i, j) : (3, 3),  sum : 3\n",
+      "(i, j) : (2, 3),  sum : 1\n",
+      "(i, j) : (3, 2),  sum : 1\n",
+      "(i, j) : (4, 3),  sum : 1\n",
+      "(i, j) : (6, 2),  sum : 1\n",
+      "{2: 2, 1: 4, 3: 1}\n"
+     ]
+    }
+   ],
    "source": [
     "    input = open(\"data/boj_17136.txt\", \"r\").readline\n",
     "    arr = [input().split() for _ in range(10)]\n",
@@ -3052,14 +3067,117 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "    input = open(\"data/boj_17136.txt\", \"r\").readline\n",
+    "    arr = [input().split() for _ in range(10)]\n",
+    "    dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
+    "\n",
+    "    for i in range(len(arr[0])):\n",
+    "        if arr[0][i] == \"1\":\n",
+    "            dp[0][i][0] = 1\n",
+    "            \n",
+    "    for i in range(1, 10):\n",
+    "        if arr[i][0] == \"1\":\n",
+    "            dp[i][0][0] = 1\n",
+    "        for j in range(1, len(arr[0])):\n",
+    "            if arr[i][j] == \"1\":\n",
+    "                dp[i][j][0] = min(dp[i][j-1][0], dp[i-1][j][0], dp[i-1][j-1][0]) + 1\n",
+    "                if dp[i][j][0] >= 5:\n",
+    "                    dp[i][j][0] = 5\n",
+    "                    \n",
+    "    size = 5\n",
+    "    while size >=1:\n",
+    "        for i in range(10):\n",
+    "            for j in range(len(dp[0])):\n",
+    "                if dp[i][j][0] == size and not dp[i][j][3]:\n",
+    "                    dp[i][j][3] = True\n",
+    "                    sum = 0\n",
+    "                    for k in range(size-1, -1, -1):\n",
+    "                        for l in range(size-1, -1, -1):\n",
+    "                            if not dp[i-k][j-l][3]:\n",
+    "                                sum += 1\n",
+    "                    print(f\"(i, j) : ({i}, {j}),  sum : {sum}\")\n",
+    "                    \n",
+    "                    \n",
+    "                    if sum == size ** 2:                        \n",
+    "                        for k in range(size-1, -1, -1):\n",
+    "                            for l in range(size-1, -1, -1):\n",
+    "                                if not(k==0 and l==0):\n",
+    "                                    dp[i-k][j-l][0] = 0\n",
+    "                    else:\n",
+    "                        dp[i][j][0] -= 1\n",
+    "        size -= 1  \n",
+    "\n",
+    "\n",
+    "    box_dict = {}\n",
+    "    for i in range(10):\n",
+    "        for j in range(len(dp[0])):\n",
+    "            if dp[i][j][0] > 0:\n",
+    "                if dp[i][j][0] not in box_dict:\n",
+    "                    box_dict[dp[i][j][0]] = 1\n",
+    "                else:\n",
+    "                    box_dict[dp[i][j][0]] += 1\n",
+    "                    \n",
+    "    print(box_dict)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 2 1 0 0 0 0 0 0 \n",
+      "0 0 1 2 0 0 0 0 0 0 \n",
+      "0 0 0 1 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 3 0 0 0 \n",
+      "0 0 1 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(len(dp[0])):\n",
+    "        print(dp[i][j][0], end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False True True False False False False False False \n",
+      "False False True False False False False False False False \n",
+      "False False False True False False False False False False \n",
+      "False False False False False False True False False False \n",
+      "False False True False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(len(dp[0])):\n",
+    "        print(dp[i][j][3], end=\" \")\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
