More on boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -3064,9 +3064,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(i, j) : (5, 6),  sum : 9\n",
+      "(i, j) : (2, 2),  sum : 4\n",
+      "(i, j) : (3, 3),  sum : 3\n",
+      "(i, j) : (2, 3),  sum : 1\n",
+      "(i, j) : (3, 2),  sum : 1\n",
+      "(i, j) : (4, 3),  sum : 1\n",
+      "(i, j) : (6, 2),  sum : 1\n",
+      "{2: 1, 1: 5, 3: 1}\n"
+     ]
+    }
+   ],
    "source": [
     "    input = open(\"data/boj_17136.txt\", \"r\").readline\n",
     "    arr = [input().split() for _ in range(10)]\n",
@@ -3090,7 +3105,6 @@
     "        for i in range(10):\n",
     "            for j in range(len(dp[0])):\n",
     "                if dp[i][j][0] == size and not dp[i][j][3]:\n",
-    "                    dp[i][j][3] = True\n",
     "                    sum = 0\n",
     "                    for k in range(size-1, -1, -1):\n",
     "                        for l in range(size-1, -1, -1):\n",
@@ -3099,13 +3113,15 @@
     "                    print(f\"(i, j) : ({i}, {j}),  sum : {sum}\")\n",
     "                    \n",
     "                    \n",
-    "                    if sum == size ** 2:                        \n",
+    "                    if sum == size ** 2:\n",
+    "                        dp[i][j][3] = True                        \n",
     "                        for k in range(size-1, -1, -1):\n",
     "                            for l in range(size-1, -1, -1):\n",
     "                                if not(k==0 and l==0):\n",
     "                                    dp[i-k][j-l][0] = 0\n",
     "                    else:\n",
     "                        dp[i][j][0] -= 1\n",
+    "                        dp[i][j][3] = True\n",
     "        size -= 1  \n",
     "\n",
     "\n",
