More on boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2811,57 +2811,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 1 1 0 0 0 0 0 0 0 \n",
-      "0 1 2 1 0 0 0 0 0 0 \n",
-      "0 0 1 2 1 1 1 0 0 0 \n",
-      "0 0 0 1 2 2 2 0 0 0 \n",
-      "0 0 0 0 1 2 3 0 0 0 \n",
-      "0 0 1 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 0 0 0 0 0 0 \n",
-      "\n",
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "\n"
+      "(i, j) : (4, 5),  sum : 4\n",
+      "(i, j) : (1, 1),  sum : 1\n",
+      "(i, j) : (1, 2),  sum : 1\n",
+      "(i, j) : (2, 2),  sum : 1\n",
+      "(i, j) : (6, 2),  sum : 1\n",
+      "{1: 4, 2: 1}\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{1: 11, 2: 6, 3: 1}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "input = open(\"data/boj_17136.txt\", \"r\").readline\n",
+    "\n",
     "arr = [input().split() for _ in range(10)]\n",
     "dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
     "\n",
@@ -2877,35 +2845,29 @@
     "            dp[i][j][0] = min(dp[i][j-1][0], dp[i-1][j][0], dp[i-1][j-1][0]) + 1\n",
     "            if dp[i][j][0] >= 5:\n",
     "                dp[i][j][0] = 5\n",
-    "            \n",
-    "for i in range(10):\n",
-    "    for j in range(len(dp[0])):\n",
-    "        print(dp[i][j][0], end=\" \")\n",
-    "    print()\n",
-    "print()\n",
-    "\n",
-    "for i in range(10):\n",
-    "    for j in range(len(dp[0])):\n",
-    "        print(dp[i][j][3], end=\" \")\n",
-    "    print()\n",
-    "print()\n",
-    "\n",
+    "                \n",
     "size = 5\n",
-    "for i in range(10):\n",
-    "    for j in range(len(dp[0])):\n",
-    "        if dp[i][j][0] == size and not dp[i][j][3]:\n",
-    "            sum = 0\n",
-    "            for k in range(size-1, -1, -1):\n",
-    "                for l in range(size-1, -1, -1):\n",
-    "                    if not dp[i-k][j-l][3]:\n",
-    "                        sum += 1\n",
-    "            print(f\"(i, j) : ({i}, {j}),  sum : {sum}\")\n",
-    "            if sum == size ** 2:\n",
-    "                dp[i][j][3] = True\n",
+    "while size >=1:\n",
+    "    for i in range(10):\n",
+    "        for j in range(len(dp[0])):\n",
+    "            if dp[i][j][0] == size and not dp[i][j][3]:\n",
+    "                sum = 0\n",
     "                for k in range(size-1, -1, -1):\n",
     "                    for l in range(size-1, -1, -1):\n",
-    "                        if not(k==0 and l==0):\n",
-    "                            dp[i-k][j-l][0] = 0  \n",
+    "                        if not dp[i-k][j-l][3]:\n",
+    "                            sum += 1\n",
+    "                print(f\"(i, j) : ({i}, {j}),  sum : {sum}\")\n",
+    "                \n",
+    "                \n",
+    "                if sum == size ** 2:\n",
+    "                    dp[i][j][3] = True                                             \n",
+    "                    for k in range(size-1, -1, -1):\n",
+    "                        for l in range(size-1, -1, -1):\n",
+    "                            if not(k==0 and l==0):\n",
+    "                                dp[i-k][j-l][0] = 0\n",
+    "                else:\n",
+    "                    dp[i][j][0] -= 1                        \n",
+    "    size -= 1  \n",
     "\n",
     "\n",
     "box_dict = {}\n",
@@ -2917,12 +2879,12 @@
     "            else:\n",
     "                box_dict[dp[i][j][0]] += 1\n",
     "                \n",
-    "box_dict         "
+    "print(box_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2931,10 +2893,10 @@
      "text": [
       "0 0 0 0 0 0 0 0 0 0 \n",
       "0 1 1 0 0 0 0 0 0 0 \n",
-      "0 1 2 1 0 0 0 0 0 0 \n",
-      "0 0 1 2 1 1 1 0 0 0 \n",
-      "0 0 0 1 2 2 2 0 0 0 \n",
-      "0 0 0 0 1 2 3 0 0 0 \n",
+      "0 0 1 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 2 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
       "0 0 1 0 0 0 0 0 0 0 \n",
       "0 0 0 0 0 0 0 0 0 0 \n",
       "0 0 0 0 0 0 0 0 0 0 \n",
@@ -2951,7 +2913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2959,256 +2921,11 @@
      "output_type": "stream",
      "text": [
       "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False False False True False False False False True \n",
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False False False True False False False False True \n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(10):\n",
-    "    for j in range(len(dp[0])):\n",
-    "        print(dp[i][j][3], end=\" \")\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(i, j) : (5, 6),  sum : 9\n",
-      "(i, j) : (2, 2),  sum : 4\n",
-      "(i, j) : (3, 3),  sum : 3\n",
-      "(i, j) : (2, 3),  sum : 1\n",
-      "(i, j) : (3, 2),  sum : 1\n",
-      "(i, j) : (4, 3),  sum : 1\n",
-      "(i, j) : (6, 2),  sum : 1\n",
-      "{2: 2, 1: 4, 3: 1}\n"
-     ]
-    }
-   ],
-   "source": [
-    "    input = open(\"data/boj_17136.txt\", \"r\").readline\n",
-    "    arr = [input().split() for _ in range(10)]\n",
-    "    dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
-    "\n",
-    "    for i in range(len(arr[0])):\n",
-    "        if arr[0][i] == \"1\":\n",
-    "            dp[0][i][0] = 1\n",
-    "            \n",
-    "    for i in range(1, 10):\n",
-    "        if arr[i][0] == \"1\":\n",
-    "            dp[i][0][0] = 1\n",
-    "        for j in range(1, len(arr[0])):\n",
-    "            if arr[i][j] == \"1\":\n",
-    "                dp[i][j][0] = min(dp[i][j-1][0], dp[i-1][j][0], dp[i-1][j-1][0]) + 1\n",
-    "                if dp[i][j][0] >= 5:\n",
-    "                    dp[i][j][0] = 5\n",
-    "                    \n",
-    "    size = 5\n",
-    "    while size >=1:\n",
-    "        for i in range(10):\n",
-    "            for j in range(len(dp[0])):\n",
-    "                if dp[i][j][0] == size and not dp[i][j][3]:\n",
-    "                    sum = 0\n",
-    "                    for k in range(size-1, -1, -1):\n",
-    "                        for l in range(size-1, -1, -1):\n",
-    "                            if not dp[i-k][j-l][3]:\n",
-    "                                sum += 1\n",
-    "                    print(f\"(i, j) : ({i}, {j}),  sum : {sum}\")\n",
-    "                    if sum == size ** 2:\n",
-    "                        dp[i][j][3] = True\n",
-    "                        for k in range(size-1, -1, -1):\n",
-    "                            for l in range(size-1, -1, -1):\n",
-    "                                if not(k==0 and l==0):\n",
-    "                                    dp[i-k][j-l][0] = 0\n",
-    "        size -= 1  \n",
-    "\n",
-    "\n",
-    "    box_dict = {}\n",
-    "    for i in range(10):\n",
-    "        for j in range(len(dp[0])):\n",
-    "            if dp[i][j][0] > 0:\n",
-    "                if dp[i][j][0] not in box_dict:\n",
-    "                    box_dict[dp[i][j][0]] = 1\n",
-    "                else:\n",
-    "                    box_dict[dp[i][j][0]] += 1\n",
-    "                    \n",
-    "    print(box_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(i, j) : (4, 4),  sum : 25\n",
-      "(i, j) : (4, 5),  sum : 24\n",
-      "(i, j) : (4, 6),  sum : 24\n",
-      "(i, j) : (4, 7),  sum : 24\n",
-      "(i, j) : (4, 8),  sum : 24\n",
-      "(i, j) : (4, 9),  sum : 25\n",
-      "(i, j) : (5, 4),  sum : 24\n",
-      "(i, j) : (5, 5),  sum : 24\n",
-      "(i, j) : (5, 6),  sum : 24\n",
-      "(i, j) : (5, 7),  sum : 24\n",
-      "(i, j) : (5, 8),  sum : 24\n",
-      "(i, j) : (5, 9),  sum : 24\n",
-      "(i, j) : (6, 4),  sum : 24\n",
-      "(i, j) : (6, 5),  sum : 24\n",
-      "(i, j) : (6, 6),  sum : 24\n",
-      "(i, j) : (6, 7),  sum : 24\n",
-      "(i, j) : (6, 8),  sum : 24\n",
-      "(i, j) : (6, 9),  sum : 24\n",
-      "(i, j) : (7, 4),  sum : 24\n",
-      "(i, j) : (7, 5),  sum : 24\n",
-      "(i, j) : (7, 6),  sum : 24\n",
-      "(i, j) : (7, 7),  sum : 24\n",
-      "(i, j) : (7, 8),  sum : 24\n",
-      "(i, j) : (7, 9),  sum : 24\n",
-      "(i, j) : (8, 4),  sum : 24\n",
-      "(i, j) : (8, 5),  sum : 24\n",
-      "(i, j) : (8, 6),  sum : 24\n",
-      "(i, j) : (8, 7),  sum : 24\n",
-      "(i, j) : (8, 8),  sum : 24\n",
-      "(i, j) : (8, 9),  sum : 24\n",
-      "(i, j) : (9, 4),  sum : 25\n",
-      "(i, j) : (9, 5),  sum : 24\n",
-      "(i, j) : (9, 6),  sum : 24\n",
-      "(i, j) : (9, 7),  sum : 24\n",
-      "(i, j) : (9, 8),  sum : 24\n",
-      "(i, j) : (9, 9),  sum : 25\n",
-      "{5: 4}\n"
-     ]
-    }
-   ],
-   "source": [
-    "    input = open(\"data/boj_17136.txt\", \"r\").readline\n",
-    "    arr = [input().split() for _ in range(10)]\n",
-    "    dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
-    "\n",
-    "    for i in range(len(arr[0])):\n",
-    "        if arr[0][i] == \"1\":\n",
-    "            dp[0][i][0] = 1\n",
-    "            \n",
-    "    for i in range(1, 10):\n",
-    "        if arr[i][0] == \"1\":\n",
-    "            dp[i][0][0] = 1\n",
-    "        for j in range(1, len(arr[0])):\n",
-    "            if arr[i][j] == \"1\":\n",
-    "                dp[i][j][0] = min(dp[i][j-1][0], dp[i-1][j][0], dp[i-1][j-1][0]) + 1\n",
-    "                if dp[i][j][0] >= 5:\n",
-    "                    dp[i][j][0] = 5\n",
-    "                    \n",
-    "    size = 5\n",
-    "    while size >=1:\n",
-    "        for i in range(10):\n",
-    "            for j in range(len(dp[0])):\n",
-    "                if dp[i][j][0] == size and not dp[i][j][3]:\n",
-    "                    sum = 0\n",
-    "                    for k in range(size-1, -1, -1):\n",
-    "                        for l in range(size-1, -1, -1):\n",
-    "                            if not dp[i-k][j-l][3]:\n",
-    "                                sum += 1\n",
-    "                    print(f\"(i, j) : ({i}, {j}),  sum : {sum}\")\n",
-    "                    \n",
-    "                    \n",
-    "                    if sum == size ** 2:\n",
-    "                        dp[i][j][3] = True                                             \n",
-    "                        for k in range(size-1, -1, -1):\n",
-    "                            for l in range(size-1, -1, -1):\n",
-    "                                if not(k==0 and l==0):\n",
-    "                                    dp[i-k][j-l][0] = 0\n",
-    "                    else:\n",
-    "                        dp[i][j][0] -= 1                        \n",
-    "        size -= 1  \n",
-    "\n",
-    "\n",
-    "    box_dict = {}\n",
-    "    for i in range(10):\n",
-    "        for j in range(len(dp[0])):\n",
-    "            if dp[i][j][0] > 0:\n",
-    "                if dp[i][j][0] not in box_dict:\n",
-    "                    box_dict[dp[i][j][0]] = 1\n",
-    "                else:\n",
-    "                    box_dict[dp[i][j][0]] += 1\n",
-    "                    \n",
-    "    print(box_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0 0 0 0 0 0 0 1 1 \n",
-      "0 0 0 0 0 0 0 2 1 1 \n",
-      "0 0 0 0 0 0 3 2 2 2 \n",
-      "0 0 0 0 0 4 3 3 3 3 \n",
-      "0 0 0 0 5 4 4 4 4 4 \n",
-      "0 0 0 4 4 4 4 4 4 4 \n",
-      "0 0 3 3 4 4 4 4 4 4 \n",
-      "0 2 2 3 4 4 4 4 4 4 \n",
-      "1 1 2 3 4 4 4 4 4 4 \n",
-      "1 1 2 3 4 4 4 4 4 4 \n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(10):\n",
-    "    for j in range(len(dp[0])):\n",
-    "        print(dp[i][j][0], end=\" \")\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False True True False False False False False False \n",
+      "False True True False False False False False False False \n",
       "False False True False False False False False False False \n",
-      "False False False True False False False False False False \n",
-      "False False False False False False True False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False True False False False False \n",
+      "False False False False False False False False False False \n",
       "False False True False False False False False False False \n",
       "False False False False False False False False False False \n",
       "False False False False False False False False False False \n",
@@ -3222,6 +2939,20 @@
     "        print(dp[i][j][3], end=\" \")\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
