More on boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2879,7 +2879,18 @@
     "            else:\n",
     "                box_dict[dp[i][j][0]] += 1\n",
     "                \n",
-    "print(box_dict)"
+    "print(box_dict)\n",
+    "\n",
+    "sum = 0\n",
+    "if any([x <= 5 for x in box_dict.values()]):\n",
+    "    for i in range(len(dp)):\n",
+    "        for j in range(len(dp[i])):\n",
+    "            if dp[i][j][0] != 0:\n",
+    "                sum += 1\n",
+    "elif not box_dict:\n",
+    "    sum = 0\n",
+    "else:\n",
+    "    sum = -1"
    ]
   },
   {
