More on boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2890,7 +2890,9 @@
     "elif not box_dict:\n",
     "    sum = 0\n",
     "else:\n",
-    "    sum = -1"
+    "    sum = -1\n",
+    "    \n",
+    "print(sum)"
    ]
   },
   {
