--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -3099,23 +3099,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(i, j) : (9, 9),  sum : 25\n",
-      "(i, j) : (4, 5),  sum : 16\n",
-      "(i, j) : (5, 4),  sum : 3\n",
-      "(i, j) : (7, 3),  sum : 9\n",
-      "(i, j) : (5, 4),  sum : 1\n",
-      "(i, j) : (1, 1),  sum : 1\n",
-      "(i, j) : (2, 1),  sum : 1\n",
-      "(i, j) : (5, 4),  sum : 1\n",
-      "{1: 3, 4: 1, 3: 1, 5: 1}\n",
-      "6\n"
+      "(i, j) : (5, 4),  sum : 25\n",
+      "(i, j) : (5, 9),  sum : 16\n",
+      "(i, j) : (9, 3),  sum : 9\n",
+      "(i, j) : (8, 6),  sum : 4\n",
+      "(i, j) : (9, 9),  sum : 1\n",
+      "{5: 1, 4: 1, 2: 1, 3: 1, 1: 1}\n",
+      "5\n"
      ]
     }
    ],
@@ -3148,7 +3145,7 @@
     "                    for l in range(size-1, -1, -1):\n",
     "                        if not dp[i-k][j-l][3] and dp[i-k][j-l][0] != 0:\n",
     "                            sum += 1\n",
-    "                print(f\"(i, j) : ({i}, {j}),  sum : {sum}\")\n",
+    "                #print(f\"(i, j) : ({i}, {j}),  sum : {sum}\")\n",
     "                \n",
     "                \n",
     "                if sum == size ** 2:\n",
@@ -3171,7 +3168,7 @@
     "            else:\n",
     "                box_dict[dp[i][j][0]] += 1\n",
     "                \n",
-    "print(box_dict)\n",
+    "#print(box_dict)\n",
     "\n",
     "sum = 0\n",
     "if any([x <= 5 for x in box_dict.values()]):\n",
@@ -3188,10 +3185,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 1 0 0 0 0 0 0 0 0 \n",
+      "0 1 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 4 0 0 0 0 \n",
+      "0 0 0 0 1 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 3 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(len(dp[0])):\n",
+    "        print(dp[i][j][0], end=\" \")\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
