More on boj_1213.ipynb

--- a/boj_1213.ipynb
+++ b/boj_1213.ipynb
@@ -2,54 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import heapq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "size : 9\n"
-     ]
-    }
-   ],
-   "source": [
-    "pq = []\n",
-    "\n",
-    "for ch in input():  # ABACABA\n",
-    "    heapq.heappush(pq, ch)\n",
-    "    \n",
-    "print(f\"size : {len(pq)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size : 9\n",
-      "첫번째 i : 0\n",
-      "두번째 i : 1\n",
-      "첫번째 i : 2\n",
-      "두번째 i : 3\n",
-      "첫번째 i : 4\n",
-      "두번째 i : 5\n",
-      "첫번째 i : 6\n",
-      "두번째 i : 7\n",
-      "첫번째 i : 8\n",
       "AABCGCBAA\n"
      ]
     }
@@ -68,10 +27,10 @@
     "\n",
     "for i in range(len(pq)):\n",
     "    if i % 2 == 0:\n",
-    "        print(f\"첫번째 i : {i}\")\n",
+    "        #print(f\"첫번째 i : {i}\")\n",
     "        front_list.append(heapq.heappop(pq))\n",
     "    else:\n",
-    "        print(f\"두번째 i : {i}\")\n",
+    "        #print(f\"두번째 i : {i}\")\n",
     "        rear_list.append(heapq.heappop(pq))\n",
     "        \n",
     "if len(front_list) == len(rear_list):\n",
