--- a/boj_1213.ipynb
+++ b/boj_1213.ipynb
@@ -49,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ABABA\n"
+      "I'm Sorry Hansoo\n"
      ]
     }
    ],
