Answer for boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -221,8 +221,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 정답"
+    "##### 정답 : Greedy전략에는 반례(counter example)가 있다. ---> 8*8 크기의 연속된 1들의 모양이 있다면 5*5로 시작하는 것보다 4*4크기의 색종이 4장이 정답인 것이다.\n",
+    "##### Backtracking을 이용해야 한다. 10*10크기의 종이위를 한칸씩 이동하다가 1을 만나면 1*1, 2*2...5*5까지 모든 종류의 색종이를 다 대보고 덮은 다음에는<br> 0으로 마킹하고 또다시 이동하고.... "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
