Answer for boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -227,10 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "board = [list(map(int, input().split())) for _ in range(10)]\n",
+    "ans = 25 \n",
+    "paper = [0] * 6"
+   ]
   }
  ],
  "metadata": {
