Answer for boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -245,6 +245,25 @@
     "ans = 25 \n",
     "paper = [0] * 6"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_possible(y, x, sz):\n",
+    "    if paper[sz] == 5:\n",
+    "        return False\n",
+    "    \n",
+    "    if y + sz > 10 or x + sz > 10:\n",
+    "        return False\n",
+    "    for i in range(sz):\n",
+    "        for j in range(sz):\n",
+    "            if board[y+i][x+j] == 0:\n",
+    "                return False\n",
+    "    return True   "
+   ]
   }
  ],
  "metadata": {
