Answer for boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -264,6 +264,22 @@
     "                return False\n",
     "    return True   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mark(y, x, sz, v):\n",
+    "    for i in range(sz):\n",
+    "        for j in range(sz):\n",
+    "            board[y+i][x+j] = v\n",
+    "    if v:  # 1인데 원상복구의 의미(색종이를 떼어낸 것이다)\n",
+    "        paper[sz] -= 1\n",
+    "    else:  # 0인데 색종이를 붙여다는 의미\n",
+    "        paper[sz] += 1      "
+   ]
   }
  ],
  "metadata": {
