Answer for boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -280,6 +280,34 @@
     "    else:  # 0인데 색종이를 붙여다는 의미\n",
     "        paper[sz] += 1      "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def backtracking(y, x):\n",
+    "    global ans\n",
+    "    \n",
+    "    if y == 10:\n",
+    "        ans = min(ans, sum(paper))\n",
+    "        return\n",
+    "    \n",
+    "    if x == 10:\n",
+    "        backtracking(y+1, 0)\n",
+    "        return\n",
+    "    \n",
+    "    if board[y][x] == 0:\n",
+    "        backtracking(y, x+1)\n",
+    "        return\n",
+    "    \n",
+    "    for sz in range(1, 6):\n",
+    "        if is_possible(y, x, sz):\n",
+    "            mark(y, x, sz, 0)\n",
+    "            backtracking(y, x+1)\n",
+    "            mark(y, x, sz, 1)"
+   ]
   }
  ],
  "metadata": {
