Answer for boj_17136.ipynb

--- a/boj_1213.ipynb
+++ b/boj_1213.ipynb
@@ -131,7 +131,27 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "c = {}\n",
+    "s = input()\n",
+    "\n",
+    "if sum(i % 2 for i in c.values()) > 1:  # 개수가 홀수인 알파벳이 몇개인가?\n",
+    "    print(\"I'm Sorry Hansoo\")\n",
+    "    \n",
+    "else:\n",
+    "    half = \"\"\n",
+    "    for k, v in sorted(c.items()):\n",
+    "        half += k * (v // 2)\n",
+    "    ans = half\n",
+    "    \n",
+    "    for k, v in c.items():\n",
+    "        if v % 2:  # 알파벳 k가 홀수개라면\n",
+    "            ans += v\n",
+    "            break\n",
+    "    \n",
+    "    ans += \"\".join(reversed(half))\n",
+    "    print(ans)"
+   ]
   }
  ],
  "metadata": {
