Answer for boj_17136.ipynb

--- a/boj_1213.ipynb
+++ b/boj_1213.ipynb
@@ -128,12 +128,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "c = {}\n",
     "s = input()\n",
+    "\n",
+    "for ch in s:\n",
+    "    if ch in s:\n",
+    "        c[ch] += 1\n",
+    "    else:\n",
+    "        c[ch] = 1\n",
     "\n",
     "if sum(i % 2 for i in c.values()) > 1:  # 개수가 홀수인 알파벳이 몇개인가?\n",
     "    print(\"I'm Sorry Hansoo\")\n",
@@ -150,7 +164,7 @@
     "            break\n",
     "    \n",
     "    ans += \"\".join(reversed(half))\n",
-    "    print(ans)"
+    "print(ans)"
    ]
   }
  ],
