Answer for boj_17136.ipynb

--- a/boj_1213.ipynb
+++ b/boj_1213.ipynb
@@ -128,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "AABCBAA\n"
      ]
     }
    ],
@@ -144,10 +144,11 @@
     "s = input()\n",
     "\n",
     "for ch in s:\n",
-    "    if ch in s:\n",
+    "    if ch in c:\n",
     "        c[ch] += 1\n",
     "    else:\n",
     "        c[ch] = 1\n",
+    "#print(c)\n",
     "\n",
     "if sum(i % 2 for i in c.values()) > 1:  # 개수가 홀수인 알파벳이 몇개인가?\n",
     "    print(\"I'm Sorry Hansoo\")\n",
@@ -160,11 +161,31 @@
     "    \n",
     "    for k, v in c.items():\n",
     "        if v % 2:  # 알파벳 k가 홀수개라면\n",
-    "            ans += v\n",
+    "            ans += k\n",
     "            break\n",
     "    \n",
     "    ans += \"\".join(reversed(half))\n",
-    "print(ans)"
+    "    print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A': 4, 'B': 2, 'C': 1}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
    ]
   }
  ],
