Answer for boj_17136.ipynb

--- a/boj_1213.ipynb
+++ b/boj_1213.ipynb
@@ -170,23 +170,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'A': 4, 'B': 2, 'C': 1}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'A': 4, 'B': 2, 'C': 1})\n",
+      "AABCBAAAABCBAAAABCBAACAABCBAA\n"
+     ]
     }
    ],
    "source": [
-    "c"
+    "from collections import Counter\n",
+    "\n",
+    "s = input()\n",
+    "c = Counter(s)\n",
+    "print(c)\n",
+    "\n",
+    "if sum(i % 2 for i in c.values()) > 1:\n",
+    "    print(\"I'm Sorry Hansoo\")\n",
+    "    \n",
+    "else:\n",
+    "    half = ''\n",
+    "    for k, v in sorted(c.items()):\n",
+    "        half += k * (v // 2)\n",
+    "    half = ans\n",
+    "    \n",
+    "    for k, v in c.items():\n",
+    "        if v % 2:\n",
+    "            ans += k\n",
+    "    ans += \"\".join(reversed(half))\n",
+    "    print(ans)          "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
