Answer for boj_17136.ipynb

--- a/boj_1213.ipynb
+++ b/boj_1213.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
      "output_type": "stream",
      "text": [
       "Counter({'A': 4, 'B': 2, 'C': 1})\n",
-      "AABCBAAAABCBAAAABCBAACAABCBAA\n"
+      "AABCBAA\n"
      ]
     }
    ],
@@ -196,21 +196,26 @@
     "    half = ''\n",
     "    for k, v in sorted(c.items()):\n",
     "        half += k * (v // 2)\n",
-    "    half = ans\n",
+    "    ans = half\n",
+    "    #print(ans)\n",
     "    \n",
     "    for k, v in c.items():\n",
     "        if v % 2:\n",
     "            ans += k\n",
+    "            break\n",
+    "        \n",
     "    ans += \"\".join(reversed(half))\n",
     "    print(ans)          "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ans = \"\""
+   ]
   }
  ],
  "metadata": {
