Answer for boj_17136.ipynb

--- a/boj_1213.ipynb
+++ b/boj_1213.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
     "\n",
     "s = input()\n",
     "c = Counter(s)\n",
-    "print(c)\n",
+    "#print(c)\n",
     "\n",
     "if sum(i % 2 for i in c.values()) > 1:\n",
     "    print(\"I'm Sorry Hansoo\")\n",
